DuPont DevSB/src/objects/pse__Expense_Limit_Rate__c.object
<CustomObject>
    <customHelpPage>pse__ExpenseLimitRateHelp</customHelpPage>
    <description>Depending on the type of expense incurred, either enforces a maximum amount (for example, Personal Meals)  or calculates an amount based on a per-unit rate (for example, Auto Mileage). You can create a limit or rate for a particular time period or role. Also depends on the project&apos;s region, practice, or group (RPG). Expense limits/rates have a lookup relationship to one of the following: RPG or project.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>The amount of the limit or rate</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Cascading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this checkbox determines whether the limit or rate applies to the child Projects/Regions/Practices/Groups of the specified Project/Region/Practice/Group.</description>
        <inlineHelpText>If checked, this checkbox determines whether the limit or rate applies to the child Projects/Regions/Practices/Groups of the specified Project/Region/Practice/Group.</inlineHelpText>
        <label>Cascading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Currency_Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>The date to use for the exchange rate when performing currency conversion on this limit/rate amount.</inlineHelpText>
        <label>Currency Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <description>Expense Limit/Rate end date</description>
        <inlineHelpText>Expense Limit/Rate end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Expense Limits / Rates</relationshipLabel>
        <relationshipName>Expense_Limits_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Expense Limits / Rates</relationshipLabel>
        <relationshipName>Expense_Limits_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Expense Limits / Rates</relationshipLabel>
        <relationshipName>Expense_Limits_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Unit__c</fullName>
        <label>Rate Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mile</fullName>
                </value>
                <value>
                    <fullName>Kilometer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Expense Limits / Rates</relationshipLabel>
        <relationshipName>Expense_Limits_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <label>Resource Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Client Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>Expense Limit/Rate start date.</description>
        <inlineHelpText>Expense Limit/Rate start date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airfare</fullName>
                    <default>true</default>
                    <label>Airfare</label>
                </value>
                <value>
                    <fullName>Lodging (Room and Tax)</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Gasoline</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Subway</fullName>
                </value>
                <value>
                    <fullName>Auto Mileage</fullName>
                </value>
                <value>
                    <fullName>Personal Meals</fullName>
                </value>
                <value>
                    <fullName>Business Meals</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Office Supplies and Services</fullName>
                </value>
                <value>
                    <fullName>IT Equipment and Services</fullName>
                </value>
                <value>
                    <fullName>Postage and Shipping</fullName>
                </value>
                <value>
                    <fullName>General and Admin Expenses</fullName>
                </value>
                <value>
                    <fullName>Employee Relations</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Expense Limit / Rate</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Type__c</columns>
        <columns>pse__Amount__c</columns>
        <columns>pse__Cascading__c</columns>
        <columns>pse__Is_Active__c</columns>
        <columns>pse__Is_Rate__c</columns>
        <columns>pse__Group__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Resource_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{0}</displayFormat>
        <label>Expense Limit / Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Limits / Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Limit_Rate_May_Not_Have_Multiple_Targets</fullName>
        <active>true</active>
        <description>Expense Limit / Rate must not reference more than one of the following: Project, Region, Practice, Group.</description>
        <errorConditionFormula>OR(AND(NOT(OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;))))))</errorConditionFormula>
        <errorMessage>Expense Limit / Rate must not reference more than one of the following: Project, Region, Practice, Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Must_have_project_or_RPG_set</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Project__c)=0,LEN(pse__Region__c)=0,
LEN(pse__Practice__c)=0,
LEN(pse__Group__c)=0)</errorConditionFormula>
        <errorMessage>A project, region, practice, or group must be set.</errorMessage>
    </validationRules>
</CustomObject>